# NP2kai

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  NP2kai.code-workspace  README.md  calendar.c  calendar.h  common.h  compiler_base.h  debugsnapshot.c  debugsnapshot.h  debugsub.c  debugsub.h  debugsub386.c  kai_note.txt  kai_wish_20110211.txt  keystat.c  keystat.h  keystat.tbl  nevent.c  nevent.h  np2_thread.c  np2_thread.h  np2_tickcount.c  np2_tickcount.h  np2ver.h  pccore.c  pccore.h  readme.txt  statsave.c  statsave.h  statsave.tbl  timing.c  timing.h  update.txt
LICENSES/: LICENSE-C86CTL.TXT  LICENSE-GD54XX.TXT  LICENSE-I386C-FPU.TXT  LICENSE-I386C-SIMD.TXT  LICENSE-I386C.TXT  LICENSE-LGY98.TXT  LICENSE-SCCI.TXT  LICENSE-TGUI9680.TXT  LICENSE-ZLIB.TXT  LICENSE.TXT  全体説明.txt
accessories/: bin2txt.c  bin2txt.dsp  bin2txt.dsw  lzxpack.c  lzxpack.dsp  lzxpack.dsw  textout.c  textout.h
android-project/: AndroidManifest.xml  build.xml
bios/: bios.c  bios.h  bios09.c  bios0c.c  bios12.c  bios13.c  bios18.c  bios19.c  bios1a.c  bios1b.c  bios1c.c  bios1f.c  biosfd80.res  biosfd80_hax.res  biosmem.h  fdfmt.h  itfrom.res  keytable.res  rsbios.h  startup.res  sxsibios.c  sxsibios.h
cbus/: amd98.c  amd98.h  atapicmd.c  atapicmd.h  board118.c  board118.h  board14.c  board14.h  board26k.c  board26k.h  board86.c  board86.h  boardlol.c  boardlol.h  boardmo.c  boardmo.h  boardpx.c  boardpx.h  boardsb16.c  boardsb16.h  boardso.c  boardso.h  boardspb.c  boardspb.h  boardx2.c  boardx2.h  cbuscore.c  cbuscore.h  cs4231io.c  cs4231io.h  ct1741io.c  ct1741io.h  ct1745io.c  ct1745io.h  gpibio.c  gpibio.h  idebios.res  ideio.c  ideio.h  mpu98ii.c  (+16 more)
cmake/: CrossOpenDinguxGCW0.cmake  CrossOpenDinguxRG350.cmake  CrossOpenDinguxRS90.cmake
codecnv/: codecnv.h  eucsjis.c  eucucs2.c  jisucs2.c  jisutf16pair.c  jisutf16pair.h  sjiseuc.c  sjisucs2.c  sjisutf16pair.c  tcswap16.c  tcswap32.c  textcnv.c  textcnv.h  ucs2sjis.c  ucs2ucs4.c  ucs2utf8.c  ucs4ucs2.c  ucs4utf8.c  utf8ucs2.c  utf8ucs4.c
common/: _memory.c  _memory.h  arc.c  arc.h  arcunzip.c  arcunzip.h  bmpdata.c  bmpdata.h  lstarray.c  lstarray.h  milstr.c  milstr.h  mimpidef.c  mimpidef.h  parts.c  parts.h  profile.c  profile.h  rect.c  rect.h  resize.c  resize.h  strres.c  strres.h  textfile.c  textfile.h  wavefile.c  wavefile.h
diskimage/: cddfile.c  cddfile.h  fddfile.c  fddfile.h  img_common.h  img_strres.c  img_strres.h
doc/: tenkey.drawio
embed/: readme.txt  vramhdl.c  vramhdl.h  vrammix.c  vrammix.h
fdd/: d88head.h  diskdrv.c  diskdrv.h  fdd_mtr.c  fdd_mtr.h  fdd_mtr.res  hdd_vhd.h  hdd_vpc.h  hddboot.res  newdisk.c  newdisk.h  sxsi.c  sxsi.h  sxsicd.c  sxsicd.h  sxsihdd.c  sxsihdd.h  sxsihdd_nvl.c
font/: font.c  font.h  fontdata.c  fontdata.h  fontdata.res  fontfm7.c  fontmake.c  fontmake.h  fontpc88.c  fontpc98.c  fontv98.c  fontx1.c  fontx68k.c  readme.txt
generic/: cmjasts.c  cmjasts.h  cmndraw.c  cmndraw.h  cmver.c  cmver.h  dipswbmp.c  dipswbmp.h  dipswbmp.res  hostdrv.c  hostdrv.h  hostdrv.tbl  hostdrvnt.c  hostdrvnt.h  hostdrvntdef.h  hostdrvs.c  hostdrvs.h  keydisp.c  keydisp.h  keydisp.res  memdbg32.c  memdbg32.h  minifont.res  np2info.c  np2info.h  readme.txt  softkbd.c  softkbd.h  softkbd.res  softkbd1.res  softkbd2.res  softkbd3.res  unasm.c  unasm.h  unasmdef.tbl  unasmfpu.tbl  unasmop.tbl  unasmop3.tbl  unasmop8.tbl  unasmstr.tbl
i286c/: cpucore.h  cpumem.c  cpumem.h  i286c.c  i286c.h  i286c.mcr  i286c_0f.c  i286c_8x.c  i286c_ea.c  i286c_f6.c  i286c_fe.c  i286c_mn.c  i286c_rp.c  i286c_sf.c  i286c_sf.mcr  v30patch.c  v30patch.h
i286x/: cpucore.h  cpucore.inc  cpumem.h  cpumem.x86  dmap.h  dmap.x86  i286x.cpp  i286x.h  i286x.mcr  i286xadr.cpp  i286xadr.h  i286xcts.cpp  i286xcts.h  i286xea.mcr  i286xrep.cpp  i286xrep.h  i286xs.cpp  i286xs.h  v30patch.cpp  v30patch.h
i386c/: cpucore.c  cpucore.h  cpumem.c  cpumem.h
i386hax/: haxcore.c  haxcore.h  haxfunc.c  haxfunc.h
io/: artic.c  artic.h  bmsio.c  bmsio.h  cgrom.c  cgrom.h  cpuio.c  cpuio.h  crtc.c  crtc.h  egc.c  (+49 more)
windows/resources/1252/: CMakeLists.txt  np2.rc  np2.rc2  np2vs2005_1252.vcproj  np2vs2008_1252.vcproj  np2vs2008_1252.vcxproj  np2vs2010_1252.sln  np2vs2019_1252.sln
windows/resources/932/: CMakeLists.txt  np2.aps  np2.rc  np2.rc2  np2jp.rc  np2vs2005_932.vcproj  np2vs2008_932.vcproj  np2vs2008_932.vcxproj  np2vs2008_932.vcxproj.filters  np2vs2010_932.sln  np2vs2019_932.sln  np2vs2019_932.vcxproj  np2vs2019_932.vcxproj.filters
windows/resources/936/: CMakeLists.txt  np2.rc  np2.rc2  np2vs2005_936.vcproj  np2vs2008_936.vcproj  np2vs2008_936.vcxproj  np2vs2008_936.vcxproj.filters  np2vs2010_936.sln  np2vs2019_936.vcxproj
x11/: Makefile.am  README.ja  ank12.res  autogen.sh  cmmidi.c  cmmidi.h  cmpara.h  cmserial.c  cmserial.h  commng.c  commng.h  compiler.h  configure.ac  dosio.c  dosio.h  drawmng.c  drawmng.h  fontmng.c  fontmng.h  ini.c  ini.h  joymng.c  joymng.h  kbdmng.c  kbdmng.h  kdispwin.c  kdispwin.h  main.c  mousemng.h  np2.c  np2.h  oemtext.c  oemtext.h  scrnmng.h  skbdwin.c  skbdwin.h  soundmng.c  soundmng.h  sysmng.c  sysmng.h  (+16 more)
x11/contrib/udev/: 70-external-fm-sound.rules
x11/debug/: debugwin.h  viewer.h  viewmem.c  viewmem.h
x11/ext/: externalchipmanager.cpp  externalopl3.cpp  externalopm.cpp  externalopna.cpp  externalpsg.cpp  opl3.cpp  opna.cpp
x11/ext/c86ctl/: c86ctlc86box.cpp  c86ctlgimic.cpp  c86ctlgimic.h  c86ctlif.cpp  c86ctlif.h  c86ctlrealchipbase.cpp
x11/ext/scci/: SCCIDefines.h  scci.h  scciif.cpp  sccisoundinterfacemanager.cpp  sccispfmlight.cpp
x11/gtk2/: dialog_about.c  dialog_calendar.c  dialog_config.c  dialog_hostdrv.c  dialog_ide.c  dialog_midi.c  dialog_network.c  dialog_newdisk.c  dialog_pci.c  dialog_screen.c  dialog_serial.c  dialog_sound.c  dialog_wab.c  gtk_drawmng.c  gtk_drawmng.h  gtk_font.c  gtk_keyboard.c  gtk_keyboard.h  gtk_main.c  gtk_menu.c  gtk_menu.h  gtk_mouse.c  gtk_screen.c  gtk_toolkit.h  gtk_wrapper.c  window_keydisp.c  window_softkbd.c
x11/misc/: guard.h  threadbase.cpp  tty.cpp  usbdev.cpp  usbdev.h
x11/resources/: np2.xbm  np2.xpm
(+1802 files in other folders)
